<resources>
    <string name="app_name">APAC2</string>
    <string name="new_issue">New</string>
    <string name="IssueName">Issue Name</string>
    <string name="AddDesc">Add your issue description</string>
    <string name="textStreet">Street</string>
    <string name="Solved">Solved</string>
    <string name="saveIncidencia">Save</string>
    <string name="incidenciaSaved">Data has been registered</string>
    <string name="Close">Close</string>
    <string name="askRemoveTitle">Remove current issue?</string>
    <string name="askRemove">Do you want to remove issue </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>